--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^2.7.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -54,12 +55,15 @@
     "http-status": "^1.5.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.4.17",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
     "swagger-jsdoc": "^6.0.2",
     "swagger-ui-express": "^4.1.6",
+    "ua-parser-js": "^2.0.5",
     "winston": "^3.3.3",
     "xss-clean": "^0.1.1",
     "yarn": "^1.22.22",
