--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint:fix": "eslint . --fix",
 		"prettier": "prettier --check **/*.js",
 		"dev": "cross-env NODE_ENV=development nodemon src/index.js",
-		"start": "cross-env NODE_ENV=development node src/index.js"
+		"start": "cross-env NODE_ENV=production node src/index.js"
 	},
 	"repository": {
 		"type": "git",
