--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"multer-storage-cloudinary": "^4.0.0",
 		"nodemailer": "^6.4.17",
 		"pg": "^8.5.1",
+		"pg-connection-string": "^2.9.1",
 		"pg-hstore": "^2.3.3",
 		"sequelize": "^6.5.0",
 		"swagger-jsdoc": "^6.0.2",
