--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"dependencies": {
 		"@hapi/joi": "^17.1.1",
 		"accesscontrol": "^2.2.1",
+		"axios": "^1.12.2",
 		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"cloudinary": "^2.7.0",
