--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"lint:fix": "eslint . --fix",
 		"prettier": "prettier --check **/*.js",
 		"dev": "cross-env NODE_ENV=development nodemon src/index.js",
-		"start": "cross-env NODE_ENV=production node src/index.js"
+		"start": "cross-env NODE_ENV=production node src/index.js",
+		"es:sync-all": "node src/scripts/es.sync.watches.js"
 	},
 	"repository": {
 		"type": "git",
@@ -40,6 +41,7 @@
 		"node": ">=12.0.0"
 	},
 	"dependencies": {
+		"@elastic/elasticsearch": "8.12.0",
 		"@hapi/joi": "^17.1.1",
 		"accesscontrol": "^2.2.1",
 		"axios": "^1.12.2",
