--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"express": "^4.17.1",
 		"express-jwt": "^6.0.0",
 		"express-rate-limit": "^5.2.3",
+		"google-auth-library": "^10.5.0",
 		"helmet": "^4.4.1",
 		"http-status": "^1.5.0",
 		"jsonwebtoken": "^8.5.1",
