--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 		"node": ">=12.0.0"
 	},
 	"dependencies": {
-		"@elastic/elasticsearch": "8.12.0",
+		"@elastic/elasticsearch": "^7.17.0",
 		"@hapi/joi": "^17.1.1",
 		"accesscontrol": "^2.2.1",
 		"axios": "^1.12.2",
