--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 		"node": ">=12.0.0"
 	},
 	"dependencies": {
-		"@elastic/elasticsearch": "^7.17.0",
 		"@hapi/joi": "^17.1.1",
+		"@opensearch-project/opensearch": "^3.5.1",
 		"accesscontrol": "^2.2.1",
 		"axios": "^1.12.2",
 		"bcrypt": "^5.0.0",
