--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"pg": "^8.5.1",
 		"pg-connection-string": "^2.9.1",
 		"pg-hstore": "^2.3.3",
+		"resend": "^6.6.0",
 		"sequelize": "^6.5.0",
 		"swagger-jsdoc": "^6.0.2",
 		"swagger-ui-express": "^4.1.6",
